mydata-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydata-v2
  labels:
    app: mydata
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydata
      version: v2
  template:
    metadata:
      labels:
        app: mydata
        version: v2
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: index-html   
        - mountPath: /etc/nginx/conf.d
          readOnly: true
          name: nginx-conf
        - mountPath: /var/log/nginx
          name: log
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf 
          items:
            - key: default.conf
              path: default.conf
      - name: index-html
        configMap:
          name: mydata-cm-v2
      - name: log
        emptyDir: {}
