mydata-svc.yaml
#################################################
# Service: mydata
#################################################
apiVersion: v1
kind: Service
metadata:
  name: mydata
  labels:
    app: mydata
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: mydata
---
