mydata-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mydata
spec:
  hosts:
  - "mydata"
  http:
  - route:
      - destination:
          host: mydata
          subset: v1
        weight: 90
      - destination:
          host: mydata
          subset: v2
        weight: 10
